--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section class="banner" id="banner">
                 <div class="content">
                     <div class="imgBx">
-                        <img src="images/myself.JPG" alt="">
+                        <img src="images/myself.jpg" alt="">
                     </div>
                     <h3>Tanmoy Mondal</h3>
                     <p>I'm a Creative Front End Web Developer.</p>
